Fixed the loss of whitespace, when displaying the post.

--- a/client/src/css/Post.css
+++ b/client/src/css/Post.css
@@ -1,7 +1,8 @@
  .post-content {
     /* Need to change the left padding for smaller screens */
-    white-space: pre-line;
+    white-space: pre-wrap;
  }
+
 
 .post-title {
     font-weight: bold;
